# cscratch

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
scratch-engine/: CMakeLists.txt  Notes.txt
scratch-engine/core/: costume.cpp  input-job.cpp  render-job.cpp  scratch-engine.cpp  scratch-util.cpp  sprite.cpp
scratch-engine/inc/: scratch-config.hpp  scratch-engine.hpp  scratch-enums.hpp  scratch-jobs.hpp  scratch-render.hpp  scratch-util.hpp  scratch-vm.hpp
