cmake_minimum_required(VERSION 3.14)

set(CMAKE_SHARED_LIBRARY_PREFIX "") 
set(CMAKE_IMPORT_LIBRARY_PREFIX "")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/arch)
set(BUILD_SHARED_LIBS OFF)

set(SDLTTF_VENDORED ON)
set(SDLMIXER_VENDORED ON)
set(SDLIMAGE_VENDORED ON)

set(SDLIMAGE_AVIF OFF)
set(SDLIMAGE_BMP OFF)
set(SDLIMAGE_JPG OFF)
set(SDLIMAGE_WEBP OFF)

add_subdirectory(scratch-engine)

add_subdirectory(SDL3 EXCLUDE_FROM_ALL)
add_subdirectory(SDL3_ttf EXCLUDE_FROM_ALL)
add_subdirectory(SDL3_mixer EXCLUDE_FROM_ALL)
add_subdirectory(SDL3_image EXCLUDE_FROM_ALL)