cmake_minimum_required(VERSION 3.14)

set(CMAKE_SHARED_LIBRARY_PREFIX "") 
set(CMAKE_IMPORT_LIBRARY_PREFIX "")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/arch)

add_subdirectory(raylib)
add_subdirectory(scratch-engine)