project(scratch-engine)
add_executable(scratch-engine)
target_include_directories(
    scratch-engine
    PUBLIC
    inc
)
target_sources(
    scratch-engine
    PRIVATE
    core/scratch-engine.cpp
    core/render-job.cpp
    core/input-job.cpp
    core/scratch-util.cpp
    core/costume.cpp
    core/sprite.cpp
)
target_link_libraries(
    scratch-engine
    PRIVATE
    raylib
)